k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hr-project
  labels:
    app.kubernetes.io/managed-by: kubectl
    environment: dev
