k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hr-backend
  namespace: hr-project
  labels:
    app: hr-backend
spec:
  # ClusterIP : accessible uniquement depuis l'intérieur du cluster.
  # L'Ingress (05-ingress.yaml) expose le service vers l'extérieur.
  type: ClusterIP
  selector:
    app: hr-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP

# DNS interne généré automatiquement :
# hr-backend.hr-project.svc.cluster.local:8080
