k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hr-backend-ingress
  namespace: hr-project
  labels:
    app: hr-backend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    # Timeout élevé pour les endpoints Spring AI (Gemini peut être lent)
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  rules:
    - host: hr-backend.local
      # Ajouter dans /etc/hosts (Windows : C:\Windows\System32\drivers\etc\hosts) :
      # <IP_MINIKUBE>  hr-backend.local
      # Obtenir l'IP Minikube : minikube ip
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: hr-backend
                port:
                  number: 8080
          - path: /swagger-ui
            pathType: Prefix
            backend:
              service:
                name: hr-backend
                port:
                  number: 8080
          - path: /v3/api-docs
            pathType: Prefix
            backend:
              service:
                name: hr-backend
                port:
                  number: 8080
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: hr-backend
                port:
                  number: 8080
